# timflow

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: pypi_publish.yml
.github/workflows/: ci-general.yml  ci-steady.yml  ci-transient.yml  ci.yml  lint.yml  pypi-publish.yml  pypi_publish.yml
docs/: conf.py  index.rst  timings.rst
docs/_templates/autoapi/: index.rst
docs/about/: index.rst  publications.bib
docs/bessel/: besselnumba_timing.ipynb  index.rst
docs/steady/: index.rst
docs/steady/00userguide/: index.rst
docs/steady/01concepts/: index.rst
docs/steady/02examples/: 00_single_layer_model.ipynb  01_well_in_uniform_flow.ipynb  02_wells_rivers_and_recharge.ipynb  03a_modeling_inhomogeneities.ipynb  03b_modeling_inhomogeneities3D.ipynb  04_horizontal_wells.ipynb  05_impermeable_walls.ipynb  building_pit.ipynb  circular_area_sink.ipynb  collector_wells.ipynb  connected_wells.ipynb  vertical_anisotropy.ipynb
docs/steady/03xsections/: cross_section_models.ipynb  index.rst
docs/steady/04benchmarks/: benchmarking_besselaes.ipynb  besselnumba_timing.ipynb  large_diameter_experimental.ipynb  test_besselaes.ipynb  test_circular_buildingpit.ipynb  test_linesink_discharge.ipynb  test_linesinkstrings.ipynb  test_normal_flux.ipynb  test_polygon_areasink.ipynb  test_well_near_lake.ipynb  test_wells.ipynb  test_wells_with_resistance.ipynb
docs/steady/04tests/: benchmarking_besselaes.ipynb  large_diameter_experimental.ipynb  test_besselaes.ipynb  test_circular_buildingpit.ipynb  test_linesink_discharge.ipynb  test_linesinkstrings.ipynb  test_normal_flux.ipynb  test_wells.ipynb  (+3 more)
docs/transient/: index.rst
docs/utils/: calibrating_timflow_models.ipynb  index.rst
tests/: test_bessel.py  test_import.py
tests/bessel_test_data/: potld_order0_lab0.txt  potld_order0_lab1.txt  potld_order0_lab2.txt  potld_order1_lab0.txt  potld_order1_lab1.txt  potld_order1_lab2.txt  potld_order2_lab0.txt  potld_order2_lab1.txt  potld_order2_lab2.txt  potls_order0_lab0.txt  potls_order0_lab1.txt  potls_order0_lab2.txt  potls_order1_lab0.txt  potls_order1_lab1.txt  potls_order1_lab2.txt  potls_order2_lab0.txt  potls_order2_lab1.txt  potls_order2_lab2.txt  qxld_order0_lab1.txt  qxld_order0_lab2.txt  qxld_order1_lab0.txt  qxld_order1_lab1.txt  qxld_order1_lab2.txt  qxld_order2_lab0.txt  qxld_order2_lab1.txt  qxld_order2_lab2.txt  qxls_order0_lab1.txt  qxls_order1_lab0.txt  qxls_order1_lab1.txt  qxls_order1_lab2.txt  qxls_order2_lab0.txt  qxls_order2_lab1.txt  qxls_order2_lab2.txt  qyld_order1_lab1.txt  qyld_order1_lab2.txt  qyld_order2_lab0.txt  qyld_order2_lab1.txt  qyld_order2_lab2.txt  qyls_order0_lab0.txt  qyls_order0_lab2.txt  (+6 more)
tests/steady/: test_besselaes.py  test_steady_notebooks.py  test_well.py
tests/transient/: test_bessel.py  test_theis.py  test_transient_notebooks.py  test_wellstring.py
timflow/: __init__.py  besselnumba.py  calibrate.py  version.py
timflow/bessel/: __init__.py  besselnumba.py
timflow/plots/: __init__.py  plots.py
timflow/steady/: __init__.py  aquifer.py  aquifer_parameters.py  bessel.py  circareasink.py  circinhom.py  constant.py  element.py  inhomogeneity.py  inhomogeneity1d.py  intlinesink.py  linedoublet.py  linedoublet1d.py  linesink.py  linesink1d.py  model.py  plots.py  stripareasink.py  trace.py  uflow.py  well.py
timflow/transient/: __init__.py  aquifer.py  aquifer_parameters.py  besselnumba_old.py  circareasink.py  circinhom.py  element.py  equation.py  fit.py  inhom1d.py  invlapnumba.py  kuhlman_invlap.py  linedoublet.py  linedoublet1d.py  linesink.py  linesink1d.py  model.py  plots.py  stripareasink.py  trace.py  well.py
utils/: clear_notebooks.py  compile_timflow_api.py  run_notebook_tests.py
(+118 files in other folders)
